src/test/ui/parser/macro-bad-delimiter-ident.stderr
error: expected one of `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `!`
  --> $DIR/macro-bad-delimiter-ident.rs:2:8
   |
LL |     foo! bar <
   |        ^ expected one of 7 possible tokens here

error: aborting due to previous error

